heading is added

--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,9 @@
         </title>
     </head>
     <body>
+        <h1>
+            You are incredible smart!
+        </h1>
         Hello, Baktygul! Again!
     </body>
 </html>
