Style was added

--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
         </title>
     </head>
     <body>
-        <h1>
+        <h1 style="color: blue">
             You are incredible smart! Baktygul keep doing and never stop!
         </h1>
         Hello, Baktygul! Again!
